--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -68,3 +68,55 @@
     transform: scale(1.1);
     transition: 0.3s;
 }
+
+@media(max-width:1300px){
+    .footer{
+        margin: 50px 100px;
+
+    }
+    .footer-email-input{
+        padding: 10px 15px;
+    }
+    .footer-subscribe{
+        font-size: 18px;
+        padding: 13px 30px;
+        padding-right: 50pxs;
+    }
+    .footer-top-right{
+        flex-direction: column;
+        gap: 10px;
+        align-items: center;
+    }
+}
+
+@media(max-width:770px){
+    .footer{
+        margin: 50px 70px;
+    }
+    .footer-top{
+        flex-direction: column;
+        gap: 50px;
+    }
+    .footer-bottom{
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 50px;
+    }
+    .footer-top-right{
+        display: flex;
+        flex-direction: column;
+    }
+    .footer-email-input{
+        gap: 15px;
+        padding: 10px 15px ;
+        padding-right: 40px;
+    }
+    .footer-subscribe{
+        padding: 15px 50px;
+     border-radius: 40px;
+    }
+
+    .footer-bottom{
+        gap: 30px;
+    }
+}
