--- a/src/Components/MyWork/MyWork.css
+++ b/src/Components/MyWork/MyWork.css
@@ -60,3 +60,58 @@
     border: 2px solid #ff00ff;
 
 }
+
+/* 1300px */
+
+@media(max-width:1300px){
+    .mywork{
+        gap: 50px;
+        margin: 50px 70px;
+    }
+    .mywork-title img{
+        width: 180px;
+    }
+    .mywork-container{
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 30px;
+
+    }
+    .mywork-container img{
+        width: 100%;
+        height: 100%;
+    }
+    
+} 
+
+  /* 770px  */
+
+ @media(max-width:770px){
+    .mywork{
+        gap: 50px;
+        margin: 50px 70px;
+        align-items: center;
+    }
+    .mywork-title h1{
+        padding: 0;
+        font-size: 40px;
+        font-weight: 500;
+    }
+    .mywork-title img{
+        width: 130px;
+        margin-right: -20px;
+    }
+    .mywork-container{
+        grid-template-columns: 1fr;
+        gap: 30px;
+    }
+    .mywork-container img{
+        width: 100%;
+        height: 100%;
+    }
+    .mywork-showmore{
+        padding: 20px 40px;
+        font-size: 18px;
+        margin: 50px auto;
+        cursor: pointer;
+    }
+} 
