--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -67,3 +67,49 @@
     transform: scale(1.05);
     transition: 0.4s;
 }
+
+
+/* 1300px */
+
+@media(max-width:1300px){
+    .services-container{
+        grid-template-columns: 1fr 1fr;
+    
+    }
+}
+ @media(max-width:770px){
+    .services{
+        align-items: center;
+        gap: 70px;
+        margin: 20px 70px;
+    }
+    .services-title h1{
+        padding: 0;
+        font-size: 50px;
+    }
+    .services-title img{
+        width: 130px;
+        margin-right: -20px;
+    }
+    .services-formate{
+        gap: 20px;
+        padding: 32px;
+
+    }
+    .services-formate h2{
+        font-size: 28px;
+
+    }
+    .services-formate p{
+        font-size: 18px;
+        line-height: 32px;
+        max-width: 300px;
+    }
+    .services-readmore img{
+        width: 20px;
+    }
+    .services-container{
+        grid-template-columns: 1fr;
+        gap: 30px;
+    }
+} 
