--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -11,12 +11,11 @@
 }
 
 .container-typing{
-    
     text-align: center;
     font-size: 60px;
     font-weight: 600;
-    width: 70%;
-    /* min-height: 50%; */
+    /* width: 70%; */ 
+    /* /* min-height: 50%;  */
     background: linear-gradient(270deg, #DF8908 10%, #B415FF 100%);
     background-clip: text;
     -webkit-background-clip: text;
