--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -147,46 +147,65 @@
  @media(max-width:770px){
     .contact{
         gap: 50px;
-        margin: 50px 60px;
-        align-items: start;
+        margin: 50px 10px;
+        align-items: center;
     }
     .contact-title h1{
         padding: 0;
-        font-size: 50px;
-        font-weight: 600;
+        font-size: 30px;
+        font-weight: 500;
     }
     .contact-title img{
-        width: 130px;
-        margin-right: -20px;
+        width: 80px;
+        margin-right: -10px;
     }
     .contact-section{
         flex-direction: column;
 
     }
     .contact-left h1{
-        font-size: 54px;
+        font-size: 40px;
 
     }
     .contact-left p{
         font-size: 18px;
+        
+        
 
     }
+
+    .contact-right{
+        gap: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .contact-details{
+        font-size: 20px;
+        gap: 10px;
+        flex-wrap: wrap;
+    }
+
     .contact-detail{
         gap:10px;
+      
     }
     .contact-detail img{
-        width: 25px;
+        width: 20px;
     }
     .contact-right label{
-        font-size: 20px;
+        font-size: 15px;
+        left: 0;
+        width: 80%;
     }
     .contact-right input{
-        width: 100%;
+        width: 80%;
         font-size: 20px;
 
     }
     .contact-right textarea{
-        width: 95%;
+        width: 80%;
         font-size: 20px;
     }
     .contact-submit{
