--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -76,8 +76,8 @@
 
  @media(max-width:770px){
     .hero img{
-        margin-top: 120px;
-    width: 260px;
+        margin-top: 100px;
+    width: 150px;
     }
     .hero h1{
         margin-top: 50px;
@@ -85,25 +85,37 @@
         font-size: 30px;
     }
     .hero p{
-        width: 60%;
+        width: 80%;
         font-size: 18px;
         line-height: 32px;
-        margin: 10px 0;
+        margin: 100px 0 0 0;
     }
     .hero-action{
         display: flex;
         flex-direction: column;
-        gap: 40px;
+        gap: 20px;
         font-size: 18px;
         font-weight: 500;
         margin-bottom: 50px;
     }
     .hero-connect{
-     padding: 20px 30px;
+     padding: 10px 15px;
      border-radius: 40px;
+     font-size: 15px;
     }
     .hero-resume{
-        padding: 20px 50px;
+        padding: 10px 20px;
         border-radius: 40px;
+        font-size: 15px;
     }
+    .container-typing{
+        text-align: center;
+        font-size: 30px;
+        font-weight: 400;
+        position: absolute;
+        z-index: 1;
+        top: 400px;
+    
+    }
+    
 } 
