--- a/src/Components/MyWork/MyWork.css
+++ b/src/Components/MyWork/MyWork.css
@@ -87,31 +87,46 @@
 
  @media(max-width:770px){
     .mywork{
-        gap: 50px;
-        margin: 50px 70px;
+        gap: 20px;
+        margin: 50px 10px;
         align-items: center;
+        justify-content: center;
     }
     .mywork-title h1{
         padding: 0;
-        font-size: 40px;
-        font-weight: 500;
+        font-size: 25px;
+        font-weight: 400;
     }
     .mywork-title img{
-        width: 130px;
-        margin-right: -20px;
+        width: 80px;
+        margin-right: -10px;
     }
     .mywork-container{
         grid-template-columns: 1fr;
-        gap: 30px;
+        gap: 20px;
+    }
+    .mywork-container a{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        /* display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center; */
     }
     .mywork-container img{
-        width: 100%;
-        height: 100%;
+        width: 80%;
+        height: 80%;
+        border-radius: 12px;
     }
     .mywork-showmore{
-        padding: 20px 40px;
-        font-size: 18px;
-        margin: 50px auto;
+        padding: 8px 15px;
+        font-weight: 400;
+        font-size: 15px;
+        margin: 10px auto;
         cursor: pointer;
+    }
+    .mywork-showmore img{
+     width: 20px;
     }
 } 
