--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,9 @@
 
 body {
     height: 100vh;
-    background-color: #161513;
+    margin: 0; /* Remove default margin */
+    background: url('./assets/background.jpg') no-repeat center center fixed; 
+    background-size: cover; /* Cover the entire viewport */
     color: white;
-    font-family: "Outfit", sans-serif
+    font-family: "Outfit", sans-serif;
 }
