--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 body {
     height: 100vh;
     margin: 0; /* Remove default margin */
-    background: url('./assets/background.jpg') no-repeat center center fixed; 
+    background-color: rgb(27, 26, 26);
     background-size: cover; /* Cover the entire viewport */
     color: white;
     font-family: "Outfit", sans-serif;
